Add support of |- or -|
The reference, name, and toRaw look confusing. We may need to unify them
as reference and definition.

--- a/test/expected_karl_picture.tex
+++ b/test/expected_karl_picture.tex
@@ -26,3 +26,5 @@
   \draw[shift={(0.0cm, 1.0cm)}]  (1.0pt, 0.0pt) -- (-1.0pt, 0.0pt) node[left, fill=white] {$1.0$};
 \end{scope}
 \filldraw[fill=green!20, draw=anglecolor]  (0.0, 0.0) -- (3.0mm, 0.0mm) arc[x radius=3.0mm, y radius=3.0mm, start angle=0.0, end angle=30.0];
+\draw  (1.9318516525781366mm, 0.5176380902050415mm) node[anglecolor] {$\alpha$};
+\draw[important line, sincolor]  (0.8660254037844387, 0.49999999999999994) -- node[left=1.0pt, fill=white] {$\sin \alpha$} ({(0.8660254037844387, 0.49999999999999994)} |- {x axis});
