--- a/test/expected_karl_picture.tex
+++ b/test/expected_karl_picture.tex
@@ -27,4 +27,5 @@
 \end{scope}
 \filldraw[fill=green!20, draw=anglecolor]  (0.0, 0.0) -- (3.0mm, 0.0mm) arc[x radius=3.0mm, y radius=3.0mm, start angle=0.0, end angle=30.0];
 \draw  (1.9318516525781366mm, 0.5176380902050415mm) node[anglecolor] {$\alpha$};
-\draw[important line, sincolor]  (0.8660254037844387, 0.49999999999999994) -- node[left=1.0pt, fill=white] {$\sin \alpha$} ({(0.8660254037844387, 0.49999999999999994)} |- {x axis});
+\draw[important line, sincolor]  (0.8660254037844387, 0.49999999999999994) -- node[left, fill=white] {$\sin \alpha$} ({(0.8660254037844387, 0.49999999999999994)} |- {x axis});
+\draw[important line, coscolor]  ({(0.8660254037844387, 0.49999999999999994)} |- {x axis}) -- node[below, fill=white] {$\cos \alpha$} (0.0, 0.0);
